--- a/MyBank/MyBank.Infra.IoC/MyBank.Infra.IoC.csproj
+++ b/MyBank/MyBank.Infra.IoC/MyBank.Infra.IoC.csproj
@@ -10,7 +10,11 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.2" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MyBank.Account.Domain\MyBank.Accounts.Domain.csproj" />
+    <ProjectReference Include="..\MyBank.Account.Infra\MyBank.Accounts.Infra.csproj" />
     <ProjectReference Include="..\MyBank.Infra.Data\MyBank.Infra.Data.csproj" />
     <ProjectReference Include="..\MyBank.Shared.Domain\MyBank.Shared.Domain.csproj" />
+    <ProjectReference Include="..\MyBank.Transfers.Domain\MyBank.Transfers.Domain.csproj" />
+    <ProjectReference Include="..\MyBank.Transfers.Infra\MyBank.Transfers.Infra.csproj" />
   </ItemGroup>
 </Project>
